Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44553

qdoc ignores operator inheritance

XMLWordPrintable

    • dd14cb7a3208777ae6a8e977990ad1255f9bebfe

      QGeoRectangle and QGeoCircle are derived from QGeoShape. Both derived class explicitly declare that they want to use the == and != operator from QGeoShape. The C++ syntax is

      using QGeoShape::operator==;
      using QGeoShape::operator!=;
      

      This creates the following warning

      qtlocation/src/positioning/qgeorectangle.h:71: warning: No documentation for 'QGeoRectangle::operator!=;booloperator!=()'
      

      At the same time the documentation for

      bool operator==(const QGeoRectangle &other) const;
      bool operator!=(const QGeoRectangle &other) const;
      

      is obscured and or entirely dropped.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gbk Martin Smith (Qt)
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes