Hide inherited == and != operators from qdoc

This is a workaround for QTBUG-44553.

Task-number: QTBUG-44553
Change-Id: Iaeba95e359fdf8047b8ed173b477ffa70f7145cc
Reviewed-by: Martin Smith <martin.smith@digia.com>
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>
Reviewed-by: Michal Klocek <michal.klocek@theqtcompany.com>